# reddit-image-downloader-CLI-qwen

./: .gitignore  API.md  README.md  comparison.md
version1/: AI_DEVELOPMENT_LOG.md  DOCUMENTATION.md  pyproject.toml
version1/src/: __init__.py  main.py
version1/src/api/: client.py  models.py
version1/src/cli/: app.py
version1/src/cli/commands/: config.py  delete.py  download.py  filters.py  list.py  metadata.py  search.py
version1/src/config/: manager.py  models.py
version1/src/downloader/: __init__.py
version1/src/storage/: database.py  models.py
version1/src/utils/: helpers.py  logger.py
version1/tests/: conftest.py
version1/tests/test_cli/: test_config.py
version2/: AI_DEVELOPMENT_LOG.md  DOCUMENTATION.md  pyproject.toml
version2/tests/: test_core.py
version2/vk_downloader/api/: client.py  models.py
version2/vk_downloader/cli/: main.py
version2/vk_downloader/cli/commands/: config_cmd.py  delete_cmd.py  download_cmd.py  filter_cmd.py  list_media_cmd.py  metadata_cmd.py  search_cmd.py
version2/vk_downloader/config/: manager.py  models.py
version2/vk_downloader/storage/: database.py  models.py
version2/vk_downloader/utils/: logger.py  resolver.py
