[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vk-media-downloader"
version = "0.1.0"
description = "CLI tool for downloading media from VKontakte using VK REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # ✅ Новый формат лицензии (PEP 639)

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0.0",
    "types-python-dotenv>=1.0.0",
]

[project.scripts]
vk-downloader = "src.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]